date and error implmented

--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -86,7 +86,7 @@
       <div>
         <span class="label label-default">Occupation Class<span aria-hidden="true" class="required">*</span></span>
         <select class="select-dropdown" formControlName="FCOccControl">
-          <option *ngFor="let item of occClass" [ngValue]="item.id">{{item.occupation}}</option> 
+          <option *ngFor="let item of occClass" >{{item.occupation}}</option> 
         </select>
       </div>
     </div>
