--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -99,7 +99,7 @@
       </div>
     </div>
 
-    <div class="row mt-2" style="justify-content:space-evenly;">
+    <!-- <div class="row mt-2" style="justify-content:space-evenly;">
       <div class="radio-button">
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfUserToken_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
@@ -121,7 +121,7 @@
         <input type="text"  formControlName="FCVolGrpLfCaseToken" class="form-control mb-2 " style="width: 100%;" placeholder="Case Token">
       </div>
 
-    </div>
+    </div> -->
 
     <div class="mt-4">
       <ng-content></ng-content>
