--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -55,8 +55,8 @@
         <span class="label">
           Accident Rate Level
         </span>
-        <select  class="form-control" formControlName="FCaccRateLevel">
-          <option *ngFor="let names of Rate" [ngValue]="names.abb">
+        <select  class="form-control" formControlName="FCaccRateLevel" >
+          <option *ngFor="let names of Rate" [value]="names.abb">
             {{ names.no }}
           </option>
         </select>
