commission split validation

--- a/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.html
+++ b/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.html
@@ -32,7 +32,8 @@
         Custom Template added Successfully.
     </div>
     <div>
-        <input type="checkbox" [(ngModel)]="isChecked" [disabled]="enableCloneSecFlag" style="margin-top: 5px;margin-right: 10px;"/><label>Do you want to Clone Template from Existing Group?</label>
+        <input type="checkbox" [(ngModel)]="isChecked" [disabled]="enableCloneSecFlag" style="margin-top: 5px;margin-right: 10px;"/>
+        <label>Template for this Group Product is not available.Do you want to Clone Template from Existing Group?</label>
     </div>
         <div class="row" *ngIf="isChecked">
             <div class="form-group col-md-4">
