--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -126,6 +126,9 @@
   <div>
 
     <form class="agent-form" [formGroup]="agentformgrp"  *ngIf="groupsData !== undefined">
+      <div *ngIf="commissionSplitErr">
+        <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
+      </div>
       <!-- first-row -->
       <div class="row" style="justify-content:space-evenly;">
         <div class="col-md-3">
@@ -142,9 +145,7 @@
           <span class="label label-default">Commisson Split %</span>
           <input type="text" formControlName="CommissonSplit" [(ngModel)]="agentCommissionSPlit_0" (change)="changeAgComSpl0($event.target.value)"
             class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')" >
-          <div *ngIf="agentformgrp.get('CommissonSplit').value > 100">
-            <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
-          </div>
+
         </div>
 
         <div class="col-md-3">
@@ -167,9 +168,7 @@
         <div class="col-md-3">
           <input type="text" formControlName="CommissonSplit1" [(ngModel)]="agentCommissionSPlit_1"  (change)="changeAgComSpl1($event.target.value)"
             class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
-          <div *ngIf="agentformgrp.get('CommissonSplit1').value > 100">
-            <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
-          </div>
+          
         </div>
 
       </div>
@@ -186,9 +185,7 @@
         <div class="col-md-3">
           <input type="text" formControlName="CommissonSplit2" [(ngModel)]="agentCommissionSPlit_2" (change)="changeAgComSpl2($event.target.value)"
             class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
-          <div *ngIf="agentformgrp.get('CommissonSplit2').value > 100">
-            <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
-          </div>
+          
         </div>
 
       </div>
@@ -205,9 +202,7 @@
         <div class="col-md-3">
           <input type="text" formControlName="CommissonSplit3" [(ngModel)]="agentCommissionSPlit_3" (change)="changeAgComSpl3($event.target.value)"
             class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
-          <div *ngIf="agentformgrp.get('CommissonSplit3').value > 100">
-            <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
-          </div>
+          
         </div>
 
       </div>
@@ -230,6 +225,9 @@
           <app-fppg [lookupValue]="selected.state" #child0 [dateValue]="dateChange">
            
             <form class="agent-form" [formGroup]="agentformgrp">
+              <div *ngIf="commissionSplitErr || commissionSplitErrFppg">
+                <small style="color: #ff6363;">Commonsplit Value Cannot Be More Than 100</small>
+              </div>
               <div class="radio-button" style="display: inline-block;padding-left: 5px;" *ngFor="let item of radioButtonArr">
                 <div><input type="radio" value={{item.value}} formControlName="fppgAgent_Action" />
                   <label class="radio-label"> {{item.name}}</label></div>
@@ -248,7 +246,7 @@
                 </div>
                 <div class="col-md-3">
                   <span class="label label-default">Commisson Split %</span>
-                  <input type="text" formControlName="CommissonSplitfppg"
+                  <input type="text" formControlName="CommissonSplitfppg" (change)="commisioncheckFppg($event.target.value)"
                     class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
 
@@ -270,7 +268,7 @@
                     class="form-control mb-2" style="width: 100%;" placeholder="Agent SubCount " onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
                 <div class="col-md-3">
-                  <input type="text" formControlName="CommissonSplit1fppg"
+                  <input type="text" formControlName="CommissonSplit1fppg" (change)="commisioncheckFppg($event.target.value)"
                     class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
 
@@ -286,7 +284,7 @@
                     class="form-control mb-2" style="width: 100%;" placeholder="Agent SubCount" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
                 <div class="col-md-3">
-                  <input type="text" formControlName="CommissonSplit2fppg"
+                  <input type="text" formControlName="CommissonSplit2fppg" (change)="commisioncheckFppg($event.target.value)"
                     class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
 
@@ -302,7 +300,7 @@
                     class="form-control mb-2" style="width: 100%;" placeholder="Agent SubCount" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
                 <div class="col-md-3">
-                  <input type="text" formControlName="CommissonSplit3fppg"
+                  <input type="text" formControlName="CommissonSplit3fppg" (change)="commisioncheckFppg($event.target.value)"
                     class="form-control mb-2 " style="width: 100%;" placeholder="Commisson Split" onkeyup="this.value=this.value.replace(/[^\d]/,'')">
                 </div>
 
