--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -18,7 +18,7 @@
       <div class="col-3">
         <span class="label label-default">Situs State</span>
         <select class="form-control" [value]="lookupValue"  formControlName="FCaccSitusState">
-          <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+          <option hidden disabled selected value> -- select Situs State -- </option>
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
             {{lookUpDataSitusState.state}}</option>
         </select>
@@ -56,8 +56,9 @@
           Accident Rate Level
         </span>
         <select  class="form-control" formControlName="FCaccRateLevel">
+          <option hidden disabled selected value> -- Select Accident Rate Level -- </option>
           <option *ngFor="let names of Rate" [ngValue]="names.abb">
-            {{ names.no }}
+            {{ names.no }} 
           </option>
         </select>
       </div>
