--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -20,7 +20,7 @@
       <div class="col-3">
         <span class="label label-default">Situs State</span>
         <select class="form-control" [value]="lookupValue" formControlName="FCbasicSitusState">
-          <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+          <option hidden disabled selected value> -- select Situs State -- </option>
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
             {{lookUpDataSitusState.state}}</option>
 
