--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -19,7 +19,7 @@
     <div class="col-3">
       <span class="label label-default">Situs State</span>
       <select class="form-control" [value]="lookupValue" formControlName="FCempCISitusState">
-        <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+        <option hidden disabled selected value> -- select Situs State -- </option>
         <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
           {{lookUpDataSitusState.state}}</option>
 
