--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -19,8 +19,8 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Situs State</span>
-        <select class="form-control" formControlName="FCfppgSitusState" [value]="lookupValue">
-          <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+        <select class="form-control" formControlName="FCfppgSitusState" >
+          <option hidden disabled selected value> -- select Situs State -- </option>
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
             {{lookUpDataSitusState.state}}</option>
 
