--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="form-group col-md-3" [formGroup]="groupSetupFG">
-      <span class="label label-default">Group effective date<span aria-hidden="true" class="required">*</span></span>
+      <span class="label label-default">Product effective date<span aria-hidden="true" class="required">*</span></span>
       <input type="date"  formControlName="fcEffDate" [min]="minDate" class="form-control"
         [(ngModel)]="minDate" style="width: 100%;" placeholder="Group Effective Date">
     </div>
@@ -72,7 +72,7 @@
     <div class="form-group col-md-3">
       <span class="label label-default">Group Vendor Email<span aria-hidden="true" class="required">*</span></span>
       <input type="email" [(ngModel)]="EnrolEmailAddress" name="email" ngModel #email="ngModel"
-        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required class="form-control"
+        pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$" required class="form-control"
         placeholder=" Group Vendor Email">
       <div *ngIf="email.touched">
         <small *ngIf="email.errors?.required" style="color: red;">Email is a required field!</small>
@@ -85,8 +85,9 @@
     <div class="col-md-3" [formGroup]="groupSetupOCC">
       <div>
         <span class="label label-default">Occupation Class<span aria-hidden="true" class="required">*</span></span>
-        <select class="select-dropdown" formControlName="FCOccControl">
-          <option *ngFor="let item of occClass" [ngValue]="item.id">{{item.occupation}}</option> 
+        <select class="select-dropdown" formControlName="FCOccControl"> 
+          <option value="" selected disabled hidden>Select Occupation Class</option>
+          <option *ngFor="let item of occClass" [value]="item.id">{{item.occupation}}</option> 
         </select>
       </div>
     </div>
@@ -104,7 +105,7 @@
     <div class="col-md-3">
       <span class="label label-default">Account Manager Email<span aria-hidden="true" class="required">*</span></span>
       <input type="email" name="Accountemail" ngModel #Accountemail="ngModel"
-        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required class="form-control" [(ngModel)]="ManagerEmail"
+        pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$" required class="form-control" [(ngModel)]="ManagerEmail"
         placeholder="Account Manager Email">
       <div *ngIf="Accountemail.touched">
         <small *ngIf="Accountemail.errors?.required" style="color: red;">Email is a required field!</small>
@@ -114,7 +115,7 @@
     <div class="col-md-3">
       <span class="label label-default">Situs State<span aria-hidden="true" class="required">*</span></span>
       <select class="select-dropdown my-1" #situsState (change)="getLookupValueSitusState(situsState.value)">
-        <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
+        <option hidden disabled selected value> -- select Situs State -- </option>
         <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
           {{ lookUpDataSitusState.state }}
         </option>
@@ -221,11 +222,11 @@
           <a class="card-title">
             FPPG
           </a>
-          <mat-slide-toggle style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedFppg" (change)="toggleChangeProductFppg($event)"
+          <mat-slide-toggle style="float: right;"  [(ngModel)]="isCheckedFppg" (change)="toggleChangeProductFppg($event)"
             [color]="toggleActiveColor">
             {{checkedToggleProductFppg}}</mat-slide-toggle>
         </div>
-        <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
+        <div id="collapseOne"  class="card-body collapse" data-parent="#accordion">
 
           <app-fppg [lookupValue]="lookupSitusStateValue" #child0 [dateValue]="dateChange">
            
