--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -18,7 +18,7 @@
     <div class="col-3">
       <span class="label label-default">Situs State</span>
       <select class="form-control" [value]="lookupValue" formControlName = "FChospSitusState">
-        <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+        <option hidden disabled selected value> -- select Situs State -- </option>
         <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
           {{lookUpDataSitusState.state}}</option>
 
