--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -17,9 +17,10 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Situs State</span>
-      <select class="form-control" [value]="lookupValue" formControlName = "FChospSitusState">
-        <option hidden disabled selected value> -- select Situs State -- </option>
-        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+      <select class="form-control" formControlName = "FChospSitusState">
+        <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
+        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.state == lookupValue" 
+        value={{lookUpDataSitusState.state}}>
           {{lookUpDataSitusState.state}}</option>
 
       </select>
