--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -20,8 +20,8 @@
       <div class="col-3">
         <span class="label label-default">Situs State</span>
         <select class="form-control" formControlName="FCfppgSitusState">
-          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  value={{lookUpDataSitusState.state}} 
-          [selected]="lookUpDataSitusState.state == lookupValue">
+          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  value={{lookUpDataSitusState.id}} 
+          [selected]="lookUpDataSitusState.id == lookupValue">
             {{lookUpDataSitusState.state}}</option>
 
         </select>
