View mode disabling form controls

--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="mt-4">
-      <button class="btn btn-primary" (click) = "resetEmpCi()"type="submit">Reset Form </button>
+      <button class="btn btn-primary" [disabled]="true" (click) = "resetEmpCi()"type="submit">Reset Form </button>
     </div>
   </div>
 
