--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -28,7 +28,7 @@
 
       </div>
       <div class="mt-4" style="justify-content:space-evenly;">
-        <button class="btn btn-primary" type="submit" (click)="restForm()">Reset Form </button>
+        <button class="btn btn-primary" [disabled]="true" type="submit" (click)="restForm()">Reset Form </button>
       </div>
     </div>
 
