--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -27,7 +27,7 @@
             <a class="nav-link" style="color: #428bca;" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link" style="color: #428bca;" [routerLink]="['/group-setup']">Group</a>
+            <a class="nav-link" style="color: #428bca;" [routerLink]="['/group-search']">Group</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link" style="color: #428bca;" [routerLink]="['/custom-bulk-update']">Custom Bulk Update</a>
