--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,9 @@
 <body>
   <app-header></app-header>
   <div class="container-fluid">
+    <!-- <h1>
+     {{title}}!
+    </h1> -->
     <router-outlet></router-outlet>
   </div>
   <app-footer ></app-footer>
