Integrated Group setup on click of nav button

--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -25,7 +25,7 @@
         </select>
       </div>              
       <div class="mt-4">
-        <button class="btn btn-primary" [disabled]="true" (click)= "resetAcc()"type="submit">Reset Form </button>
+        <button class="btn btn-primary" [disabled]=resetFlag (click)= "resetAcc()"type="submit">Reset Form </button>
       </div>
     </div>
     <div class="row pb-2 " style="justify-content:space-evenly;">
