--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -22,7 +22,7 @@
           <input type="text" class="form-control mb-2" formControlName = "FCfppiAgentSign" style="width: 100%;" placeholder="Agent Signature">
         </div>
         <div class="mt-4">
-          <button class="btn btn-primary" [disabled]="true" (click) ="resetfpp()" type="submit">Reset Form </button>
+          <button class="btn btn-primary" [disabled]=resetFlag (click) ="resetfpp()" type="submit">Reset Form </button>
         </div>
       </div>
   
