--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -29,7 +29,7 @@
 
       </div>
       <div class="mt-4">
-        <button class="btn btn-primary" [disabled]="true" type="submit" (click)= "resetfpp()">Reset Form </button>
+        <button class="btn btn-primary" [disabled]=resetFlag type="submit" (click)= "resetfpp()">Reset Form </button>
       </div>
     </div>
 
