--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -27,7 +27,7 @@
         </select>
       </div>
       <div class="mt-4">
-        <button class="btn btn-primary" [disabled]="true" type="submit">Reset Form </button>
+        <button class="btn btn-primary" [disabled]=resetFlag type="submit">Reset Form </button>
       </div>
     </div>
 
